# PipeCompute

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json
configs/: test.json
include/PipeCompute/: Api.hpp  Bend.hpp  BendSimulator.hpp  ConfigParser.hpp  Params.hpp  Pipe.hpp  PipeSimulator.hpp  Results.hpp  Tee.hpp  TeeSimulator.hpp  ThermoProperties.hpp  Types.hpp
src/: Bend.cpp  BendSimulator.cpp  ConfigParser.cpp  MockThermo.cpp  Pipe.cpp  PipeSimulator.cpp  Tee.cpp  TeeSimulator.cpp  main.cpp
